# ZotPilot

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  README_CN.md  README_EN.md  SECURITY.md  SKILL.md  build.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
.sisyphus/notepads/fix-release-blockers/: learnings.md
config/: zotpilot.example.toml
connector/: PROTOCOL.md  README.md  README_zh-CN.md  build.sh  gulpfile.js  package-lock.json  package.json
connector/scripts/gen-icons/: generate.js  package.json
connector/src/browserExt/: agentAPI.js  keep-mv3-alive.js  manifest-v3.json  manifest.json  saveWithoutProgressWindow.js
connector/test/tests/: agentAPITest.mjs
docs/: decisions.md  supported-clients.md  tools-reference.md
docs/e2e-scenarios/: RUNNER.md  scenarios.md
launchers/: README.md  run_zotpilot_index_full_56_gui.ps1  run_zotpilot_index_full_library_gui.ps1  run_zotpilot_index_monitor_gui.ps1  run_zotpilot_index_resume_latest_gui.ps1  run_zotpilot_index_sample_gui.ps1  zotpilot_collection_index_gui.py  zotpilot_index_monitor_gui.py
references/: install-steps.md  note-analysis-prompt.md  note-template-brief.md  note-template-full.md  post-ingest-guide.md  profiling-guide.md  scoring-guide.md  setup-guide.md  tool-guide.md  troubleshooting.md
scripts/: e2e_setup_smoke.sh  ingest_routing_results.json  ingest_routing_test.py  platforms.py  run.py  verify_vendor_catalog.py
scripts/gen-icons/: package-lock.json
skill/: SKILL.md  install-guide.md
src/browserExt/: agentAPI.js  progressWindow-zotpilot.css
src/zotpilot/: __init__.py  __main__.py  _platforms.py  bridge.py  cli.py  config.py  credential_migration.py  crossref_client.py  doctor.py  filters.py  formula_display.py  identifier_resolver.py  index_authority.py  index_progress.py  index_recovery.py  indexer.py  interfaces.py  journal_ranker.py  models.py  openalex_client.py  providers.py  reranker.py  result_utils.py  retriever.py  runtime_settings.py  secret_store.py  server.py  state.py  translation.py  vector_store.py  zotero_api_reader.py  zotero_client.py  zotero_detector.py  zotero_writer.py
src/zotpilot/academic_search/: __init__.py  openalex_provider.py  pubmed_client.py  pubmed_provider.py
src/zotpilot/data/: journal_overrides.csv  scimago_quartiles.csv
src/zotpilot/embeddings/: __init__.py  base.py  dashscope.py  gemini.py  local.py  ollama.py  openai_compat.py  sentence_transformer.py
src/zotpilot/feature_extraction/: __init__.py  captions.py  dashscope_vision_api.py  debug_db.py  formula_ocr.py  local_vision_api.py  paddle_extract.py  vision_api.py  vision_cache.py  vision_extract.py
src/zotpilot/feature_extraction/methods/: figure_detection.py
src/zotpilot/pdf/: __init__.py  annotator.py  chunker.py  chunker_base.py  extractor.py  llamaindex_chunker.py  orphan_recovery.py  reference_matcher.py  section_classifier.py
src/zotpilot/skills/: SKILL.md  __init__.py  ztp-profile.md  ztp-research.md  ztp-review.md  ztp-setup.md  ztp-tutor.md
src/zotpilot/tools/: __init__.py  admin.py  citations.py  context.py  indexing.py  ingest_state.py  ingestion.py  ingestion_bridge.py  ingestion_helpers.py  ingestion_search.py  library.py  profiles.py  research_workflow.py  search.py  tutor.py  workflow.py  write_ops.py
src/zotpilot/tools/ingestion/: _ingest.py  (+7 more)
src/zotpilot/workflow/: __init__.py  batch.py  batch_store.py  research_session.py  session_store.py  worker.py
test/tests/: agentAPITest.mjs
tests/: conftest.py  test_advanced_search.py  test_annotations.py  test_annotator.py  test_batch_workflow_core.py  test_bootstrap_install.py  test_bridge.py  test_cache.py  test_chunker.py  test_chunker_backend_selection.py  test_chunker_protocol.py  test_cli_config.py  test_cli_formula_backfill.py  test_cli_openai_compat.py  test_cli_setup.py  test_cli_update.py  test_collection_items.py  test_config.py  test_config_chunker_backend.py  test_crossref_client.py  test_dimension_contract.py  test_doctor.py  test_embedder.py  test_extractor_ocr_policy.py  test_feeds.py  test_formula_display.py  test_formula_ocr.py  test_identifier_resolver.py  test_incident_2026_04_08_replay.py  test_incident_replay.py  test_index_authority.py  test_index_progress.py  test_indexer.py  test_indexer_rate_limit.py  test_indexing_batch_defaults.py  test_ingest_candidates.py  test_ingest_regression_2026_04_08.py  test_ingest_state.py  test_ingestion_canary.py  test_ingestion_connector.py  (+59 more)
tests/fixtures/: skill_heading_allowlist.json  skill_imperative_verbs.json  taxonomy_synonym_pairs.json
tests/incidents/: 2026_04_08_post_ingest_index_gate.jsonl  README.md
(+4 files in other folders)
